# hs-to-coq

./: .gitignore  .gitmodules  .hlint.yaml  .travis.yml  CLAUDE.md  Makefile  Plan.md  README.md  TODO.md  cabal.project  common.mk  default.nix  fix-coq-warnings-interventions.md  flake.nix  hs-to-coq.cabal  hs-to-rocq.cabal  paper-claims-audit.md  stack.yaml
base/: README.md  _CoqProject  coq-hs-to-coq-base.opam  coq-hs-to-rocq-base.opam
base-thy/: _CoqProject  coq-hs-to-coq-base-thy.opam  coq-hs-to-rocq-base-thy.opam
base-thy/Data/: Either.v  Foldable.v  OldList.v  Ord.v  Proxy.v  Traversable.v  Tuple.v
base-thy/Data/Bits/: Popcount.v
base-thy/GHC/: Base.v  Enum.v  List.v
base/Control/: Applicative.h2ci  Applicative.v  Arrow.h2ci  Arrow.v  Category.h2ci  Category.v  Monad.v
base/Control/Monad/: Fail.h2ci  Fail.v  Zip.h2ci  Zip.v
base/Data/: Bifoldable.h2ci  Bifoldable.v  Bifunctor.h2ci  Bifunctor.v  Bitraversable.h2ci  Bitraversable.v  Bool.v  Either.h2ci  Either.v  Foldable.h2ci  Foldable.v  Function.v  Functor.v  List.v  Maybe.v  Monoid.h2ci  Monoid.v  OldList.h2ci  OldList.v  Ord.h2ci  Ord.v  Proxy.h2ci  Proxy.v  Semigroup.h2ci  Semigroup.v  SemigroupInternal.h2ci  SemigroupInternal.v  Traversable.h2ci  Traversable.v  Tuple.v  Void.h2ci  Void.v
base/Data/Functor/: Classes.h2ci  Classes.v  Compose.h2ci  Compose.v  Const.h2ci  Const.v  Identity.h2ci  Identity.v  Product.h2ci  Product.v  Sum.h2ci  Sum.v  Utils.h2ci  Utils.v
base/Data/List/: NonEmpty.v
base/Data/Type/: Equality.h2ci
base/GHC/: Base.h2ci  Base.v  List.v  Maybe.v
base/HsToCoq/: DeferredFix.v  DeferredFixImpl.v  Err.v  Nat.v  Skip.v  Unpeel.v  Wf.v
base/HsToRocq/: DeferredFix.v  DeferredFixImpl.v  Err.v  Nat.v  Skip.v  Unpeel.v  Wf.v
doc/: Makefile  README.md  (+1 more)
examples/containers/: ContainerPlan.md  Makefile  README.md  coq-hs-to-coq-containers.opam  coq-hs-to-rocq-containers.opam  edits
examples/containers/certicoq/: README.md
examples/containers/drop-in/: FastLookup.hs
examples/containers/extraction/: containers-extracted.cabal
examples/containers/extraction/extracted-src/: Extract.v  _CoqProject
examples/containers/hs-spec/: IntSetProperties.v
examples/containers/lib/: FastLookup.v  IntSetValidity.v  _CoqProject
examples/containers/manual/: BitTerminationProofs.v  CTZ.v  IntWord.v  Popcount.v
examples/containers/manual/Data/: SequenceManual.v
examples/containers/module-edits/FastLookup/: edits
examples/containers/theories/: BitUtils.v  DyadicIntervals.v  HSUtil.v  IntMapProofs.v  IntSetProofs.v  IntSetPropertyProofs.v  IntSetUtil.v  IntSetWordProofs.v  OrdTactic.v  OrdTheories.v  README.md  Set.v  SetProofs.v  SortSorted.v  _CoqProject  test_isSubmapOf.v  test_maskpow2.v  test_typeclass_loop.v
(+869 files in other folders)
