opam-version: "2.0"
name: "coq-hs-to-rocq-base-thy"
version: "dev"
synopsis: "Proofs about the Coq translation of the Haskell base library"
maintainer: "antal.b.sz@gmail.com"
authors: [
  "Antal Spector-Zabusky"
  "Joachim Breitner"
  "Yao Li"
  "Christine Rizkallah"
  "John Wiegley"
  "Stephanie Weirich"
]
license: "MIT"
homepage: "https://github.com/plclub/hs-to-rocq"
bug-reports: "https://github.com/plclub/hs-to-rocq/issues"
dev-repo: "git+https://github.com/plclub/hs-to-rocq.git"
depends: [
  "coq" {>= "8.20" & < "8.21~"}
  "coq-hs-to-rocq-base" {= version}
]
build: [
  ["sh" "-c" "grep -v '\\.\\./' _CoqProject > _CoqProject.opam"]
  ["coq_makefile" "-f" "_CoqProject.opam" "-o" "Makefile"]
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
