opam-version: "2.0"
name: "coq-hs-to-rocq-base"
version: "dev"
synopsis: "Coq translation of parts of the Haskell base library"
maintainer: "antal.b.sz@gmail.com"
authors: [
  "Antal Spector-Zabusky"
  "Joachim Breitner"
  "Yao Li"
  "Christine Rizkallah"
  "John Wiegley"
  "Stephanie Weirich"
]
license: "MIT"
homepage: "https://github.com/plclub/hs-to-coq"
bug-reports: "https://github.com/plclub/hs-to-coq/issues"
dev-repo: "git+https://github.com/plclub/hs-to-coq.git"
depends: [
  "coq" {>= "8.20" & < "8.21~"}
]
build: [
  ["coq_makefile" "-f" "_CoqProject" "-o" "Makefile"]
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
