opam-version: "2.0"
name: "coq-hs-to-rocq-containers"
version: "dev"
synopsis: "Coq translation and verification of Haskell's containers library"
maintainer: "antal.b.sz@gmail.com"
authors: [
  "Antal Spector-Zabusky"
  "Joachim Breitner"
  "Yao Li"
  "Christine Rizkallah"
  "John Wiegley"
  "Stephanie Weirich"
]
license: "MIT"
homepage: "https://github.com/plclub/hs-to-coq"
bug-reports: "https://github.com/plclub/hs-to-coq/issues"
dev-repo: "git+https://github.com/plclub/hs-to-coq.git"
depends: [
  "coq" {>= "8.20" & < "8.21~"}
  "coq-hs-to-rocq-base" {= version}
  "coq-hs-to-rocq-base-thy" {= version}
  "coq-mathcomp-ssreflect" {>= "2.2.0"}
]
build: [
  ["sh" "-c" "cd lib && grep -v '\\.\\./' _CoqProject > _CoqProject.opam && coq_makefile -f _CoqProject.opam -o Makefile"]
  [make "-C" "lib" "-j%{jobs}%"]
  ["sh" "-c" "cd theories && sed -e '/\\.\\.\\/\\.\\.\\/\\.\\.\\//d' -e 's|../../containers/lib|../lib|' _CoqProject > _CoqProject.opam && coq_makefile -f _CoqProject.opam -o Makefile"]
  [make "-C" "theories" "-j%{jobs}%"]
]
install: [
  [make "-C" "lib" "install"]
  [make "-C" "theories" "install"]
]
